# haven

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: async.rs  async_callbacks.rs  automated_testing.rs  basic.rs  buttons.rs  gestures.rs  image.rs  productivity.rs  scroller.rs  text_fields.rs  winit_basic.rs  winit_multi.rs
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
examples/scroller/src/: main.rs
src/: app.rs  background_style.rs  brush_source.rs  button.rs  circle.rs  draw_layout.rs  dropdown.rs  editor.rs  gestures.rs  image.rs  lib.rs  models.rs  pane.rs  path.rs  public_api_test.rs  rect.rs  render.rs  scroller.rs  slider.rs  svg.rs  tests.rs  text.rs  text_field.rs  toggle.rs  utils.rs  view.rs  winit.rs
src/gestures/: mod.rs  predicates.rs  regions.rs
src/platform/: winit.rs
src/prebuilts/: button.rs  dropdown.rs  mod.rs  scroll_feedback.rs  scroller.rs  slider.rs  text_field.rs  toggle.rs
src/primitives/: circle.rs  image.rs  mod.rs  path.rs  rect.rs  shadow.rs  shape.rs  svg.rs  text.rs
src/renderers/: anyrender.rs  mod.rs  vello.rs
src/snapshots/: haven__public_api_test__api.snap  haven__public_api_test__api_full.snap  haven__public_api_test__api_simplified.snap
