[package]
name = "haven"
version = "0.1.0"
edition = "2024"
publish = false

[[example]]
name = "basic"
path = "examples/basic.rs"
required-features = ["winit", "vello"]

[[example]]
name = "buttons"
path = "examples/buttons.rs"
required-features = ["winit", "vello"]

[[example]]
name = "scroller"
path = "examples/scroller.rs"
required-features = ["winit", "vello"]

[[example]]
name = "image"
path = "examples/image.rs"
required-features = ["winit", "vello"]

[[example]]
name = "async"
path = "examples/async.rs"
required-features = ["winit", "vello"]

[[example]]
name = "productivity"
path = "examples/productivity.rs"
required-features = ["winit", "vello"]

[[example]]
name = "gestures"
path = "examples/gestures.rs"
required-features = ["winit", "vello"]

[[example]]
name = "text_fields"
path = "examples/text_fields.rs"
required-features = ["winit", "vello"]

[dependencies]
backer = { git = "https://github.com/cyypherus/backer", branch = "main" }
# backer = { path = "../backer" }
bytemuck = { version = "1", features = ["derive"] }
clipboard-rs = "0.3.0"
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
    "gif",
    "webp",
] }
kurbo = "0.13.0"
lilt = "0.8"
parley = "0.7.0"
peniko = "0.6.0"
pollster = { version = "0.4.0", optional = true }

tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }
vello_svg = { version = "0.9.0", features = ["wgpu"], optional = true }
wgpu = { version = "27.0.1", optional = true }
winit = { version = "0.30.12", optional = true }

[features]
default = ["winit", "vello"]
debug-overlay = ["vello"]
winit = ["dep:winit"]
vello = ["winit", "dep:pollster", "dep:vello_svg", "dep:wgpu"]

[dev-dependencies]
arboard = "3.4"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43.0", features = ["fs"] }
